fix SinglCardWrapper component overflow-y

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ img{
 
 .bg-glass {
   background: rgba(255, 255, 255, 0.04) !important;
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37) !important;
+  /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37) !important; */
   backdrop-filter: blur(5.5px) !important;
   -webkit-backdrop-filter: blur(5.5px) !important;
   border-radius: 20px;
@@ -83,3 +83,4 @@ img{
 .text-gray {
   color:lightgrey !important;
 }
+
